feat: add RabbitMQ and Redis admin panels
